samples/_failures_safe/1761207564_5d1a65_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1eb4682c.c: In function ‘main’:
./samples/SAFE/__tmp_1eb4682c.c:162:9: error: expected expression at end of input
  162 |         switch (
      |         ^~~~~~
./samples/SAFE/__tmp_1eb4682c.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1eb4682c.c:162:9: error: expected declaration or statement at end of input
